fixed gap and add loading

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,7 @@
     color: var(--text-color);
     background: var(--bg-color);
     min-height: 100vh; 
+    scroll-behavior: smooth;
 }
 
 .app_light_theme, .app_dark_theme {
