--- a/src/features/ExportTable/ui/ExportData/ExportData.module.scss
+++ b/src/features/ExportTable/ui/ExportData/ExportData.module.scss
@@ -1,7 +1,8 @@
 .blockExport {
     display: flex;
     flex-direction: row;
-    margin-top: -30px;
+    margin-top: -20px;
+    margin-bottom: 80px;
 }
 
 .button {
